@@ -11,6 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jacoco.reportPath>${project.basedir}/../target/jacoco.exec</jacoco.reportPath>
     </properties>
 
     <modules>
@@ -20,17 +21,12 @@
         <module>com.github.lbovolini.crowd.discovery</module>
         <module>com.github.lbovolini.crowd.client</module>
         <module>com.github.lbovolini.crowd.server</module>
+        <module>com.github.lbovolini.crowd.doc</module>
     </modules>
 
     <build>
+
         <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-            </plugin>
-
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -41,42 +37,79 @@
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
                 </executions>
             </plugin>
-
-            <plugin>
-                <groupId>org.eluder.coveralls</groupId>
-                <artifactId>coveralls-maven-plugin</artifactId>
-                <version>4.3.0</version>
-                <configuration>
-                    <repoToken>${COVERALLS_TOKEN}</repoToken>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>javax.xml.bind</groupId>
-                        <artifactId>jaxb-api</artifactId>
-                        <version>2.3.1</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <source>11</source>
-                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
-                </configuration>
-            </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.2.0</version>
+                    <configuration>
+                        <source>11</source>
+                        <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M5</version>
+                    <configuration>
+                        <argLine>
+                            @{argLine}
+                            --add-opens
+                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.connection=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.buffer=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.message=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.message.messages=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.node=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.object=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.request=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.util=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.core/com.github.lbovolini.crowd.core.worker=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.connection=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.message=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.monitor=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.request=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.service=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.util=ALL-UNNAMED\
+                                com.github.lbovolini.crowd.discovery/com.github.lbovolini.crowd.discovery.worker=ALL-UNNAMED
+                        </argLine>
+                        <systemPropertyVariables>
+                            <jacoco-agent.destfile>**/jacoco.exec</jacoco-agent.destfile>
+                        </systemPropertyVariables>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.eluder.coveralls</groupId>
+                    <artifactId>coveralls-maven-plugin</artifactId>
+                    <version>4.3.0</version>
+                    <configuration>
+                        <repoToken>${COVERALLS_TOKEN}</repoToken>
+                        <jacocoReports>${project.basedir}/com.github.lbovolini.crowd.doc/target/site/jacoco-aggregate/jacoco.xml</jacocoReports>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>javax.xml.bind</groupId>
+                            <artifactId>jaxb-api</artifactId>
+                            <version>2.3.1</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
     </build>
 
     <dependencies>
